ci: 添加 GitHub Actions 打包配置 + 完善 electron-builder 配置

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -16,9 +16,19 @@ win:
   executableName: mysql-connection-tool
   target:
     - nsis
+    - portable
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   oneClick: false
   allowToChangeInstallationDirectory: true
+  createDesktopShortcut: true
+  createStartMenuShortcut: true
+mac:
+  target:
+    - dmg
+linux:
+  target:
+    - AppImage
+    - deb
