fix: 添加 author 字段修复 Linux deb 打包

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mysql-connection-tool",
   "version": "1.0.0",
   "description": "MySQL连接工具",
+  "author": {
+    "name": "KK1181958464",
+    "email": "1181958464@qq.com"
+  },
   "main": "./out/main/index.js",
   "scripts": {
     "dev": "electron-vite dev",
