--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,6 +14,7 @@ asarUnpack:
   - node_modules/better-sqlite3/**
 win:
   executableName: mysql-connection-tool
+  icon: resources/icon.png
   target:
     - nsis
     - portable
@@ -26,9 +27,11 @@ nsis:
   createDesktopShortcut: true
   createStartMenuShortcut: true
 mac:
+  icon: resources/icon.png
   target:
     - dmg
 linux:
+  icon: resources/icon.png
   target:
     - AppImage
     - deb
